Fix compilation on newer jdks
Don't reference sun.misc.Unsafe directly and use reflection instead. This works fine in runtime.